# mjx-convert

./: Makefile  README.md  converted  pyproject.toml
converter/: mjlog_decoder.py
srcmjlog/: test.mjlog
