[tool.poetry]
name = "mjx-convert"
version = "0.1.0"
description = ""
authors = ["0num4 <r.oonuma@matsuri-tech.com>"]
readme = "README.md"
packages = [{include = "mjx_convert"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
